2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Re-use the same single dired
	browse buffer for all files, with `use insert-file-contents'
	instead of find-file. Display an explanation for unviewable dired lines.
	(diredc-browse-mode): Properly un-dedicate and re-dedicate window
	on exiting mode.

2020-12-29  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist--prune-deleted-directories): Move
	function in file.
	(diredc--abort-on-directory-deleted)
	(diredc--ask-on-directory-deleted): New functions.
	(diredc-hist-change-directory, diredc-hist-up-directory)
	(diredc-hist-duplicate, diredc-hist-find-alternate-file): Perform
	diredc-hist--prune-deleted-directories.
	(diredc-hist-up-directory, diredc-hist-duplicate)
	(diredc-hist-find-alternate-file): Handle case of current
	directory deleted.
	(diredc-hist-up-directory): Improve method of navigating to parent
	directories.
	(diredc-wdired): New wrapper function to handle case of current
	directory deleted.
	(diredc--create-keymap): Use the new wrapper function.

	* diredc.el (diredc-hist--history-list): BUGFIX default value.
	(diredc-hist--hook-function): Property removal should be
	unnecessary.

2020-12-28  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist--prune-deleted-directories): New function.
	(diredc-hist-select, diredc-hist-previous-directory): Use it.
	(diredc-hist-change-directory): Create non-existing directories
	and move point to filename when a non-directory is specified.

2020-12-21  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc): Don't autoload global keybinding (closes
	github issue #6).

2020-12-18  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el: Remove conditional global keybinding for function
	diredc, rename variable dired-allow-duplicate-buffers to
	diredc-allow-duplicate-buffers, update the documentation
	accordingly.

2020-12-17  Boruch Baum  <boruch_baum@gmx.com>
